--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -141,7 +141,7 @@
 
     <div class="window" id="popup-window">
         <div class="inner-window">
-            <input name="query" placeholder="Enter feedback" type="search">
+            <input name="query" placeholder="Enter feedback" type="text">
         </div>
 
         <button id="send-button">Send</button>
