--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -35,7 +35,7 @@
             </div>
         </button>
 
-        <a th:href="@{/main.page}" href="main.html">
+        <a th:href="@{/main}" href="main.html">
             <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
         </a>
     </div>
@@ -48,7 +48,7 @@
 
     <div class="window" id="popup-window">
         <div class="inner-window">
-            <input name="query" placeholder="Enter feedback" type="search">
+            <input name="query" placeholder="Enter feedback" type="text">
         </div>
 
         <button id="send-button">Send</button>
