--- a/src/main/resources/static/css/allRecipes.css
+++ b/src/main/resources/static/css/allRecipes.css
@@ -136,12 +136,10 @@ ul {
 }
 
 ul li {
-
     list-style: none;
     padding-left: 0.2605vw;
     margin-left: 0.4vw;
-    margin-right: 1.8vw;
-    margin-top: 0.5vh;
+    margin-right: 0.7vw;
 }
 
 ul li:hover {
@@ -149,7 +147,7 @@ ul li:hover {
     border-radius: 5.5vw;
     height: 5vh;
     width: 8.7vw;
-} /*hover for menu list elements*/
+}
 
 ul hr {
     border: 0.104167vw solid black;
@@ -287,31 +285,27 @@ ul hr {
     margin-top: 1vh;
     overflow: auto;
 }
+
 .ol ol {
     list-style-type: none;
 }
 
 .ol::-webkit-scrollbar {
     width: 0.78125vw;
-    margin-right: 5vw;
 }
 
 .ol::-webkit-scrollbar-track {
-    margin-top: 2.7778vh;
+    margin-top: 3vh;
     border: 0.0520834vw solid black;
     border-radius: 50px;
     background: #F2E3B3;
-    margin-left: 0.5vw;
 }
 
 .ol::-webkit-scrollbar-thumb {
     background: #733506;
     border-radius: 50px;
+    right: 50vw;
 }
-
-.ol-scrollbar{
-    position: absolute;
-    right: 5vw;}
 
 .h2{
     position: absolute;
