--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -40,7 +40,7 @@
         <h1 class="login-heading">Log in</h1>
         <form th:action="@{/login}" method="post">
             <div class="login-form email">
-                <input name="username" placeholder="Enter email" type="text" required>
+                <input name="username" placeholder="Enter email" type="email" required>
             </div>
             <div class="login-form password">
                 <input name="password" placeholder="Enter password" type="password" required>
