--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -35,8 +35,7 @@
 
     <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home">
 </div>
-</header>
-<p th:text="${recipe.getDescription()}"></p>
+<!--<p th:text="${recipe.getDescription()}"></p>
 <a th:href="@{/allRecipes(category=${recipe.getCategory().getTitle()})}"
    th:text="${recipe.getCategory().getTitle()}"></a>
 <p th:text="${recipe.getAverageMark()}"></p>
@@ -57,7 +56,7 @@
 <table th:each="comment : ${recipe.getComments()}">
     <tr th:text="${comment.getUser().getId()}"></tr>
     <tr th:text="${comment.getText()}"></tr>
-</table>
+</table>-->
 
 <div class="container">
     <div class="left">
