--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -33,9 +33,9 @@
             </div>
         </div>
 
-        <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home" >
-        <a class="home" href="main.html" th:href="@{/}" > </a>
-        <!--        <a href = "main.html" th:href="@{images/home.svg}"></a>-->
+        <a th:href="@{/main.page}" href="main.html">
+            <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
+        </a>
 
 
     </div>
