--- a/src/main/resources/static/css/userPage.css
+++ b/src/main/resources/static/css/userPage.css
@@ -126,6 +126,18 @@ body {
     top: 30vh;
 }
 /*____________________________________________________________________________________________________________________*/
+.stick{
+    position: absolute;
+    width: 100vw;
+    height: 2vh;
+    background-color:  black;
+    top: 20.7vh;
+
+}
+.stick2{
+    top: 93.3vh;
+}
+/*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
     width: 100%;
