--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -49,6 +49,8 @@
     <div class="line">
         <div class="c1">User name</div>
     </div>
+    <div class="stick"></div>
+    <div class="stick"></div>
 </main>
 
 <footer class="footer">
