--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -41,6 +41,13 @@
     </div>
 </header>
 
+<main>
+    <div class="cooker">
+        <div class="cooker-circle"></div>
+        <img th:src="@{images/cooker.svg}" src="../../static/images/cooker.svg" alt="cooker" class="cooker">
+    </div>
+</main>
+
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
 
