--- a/src/main/resources/static/css/userPage.css
+++ b/src/main/resources/static/css/userPage.css
@@ -93,7 +93,7 @@ body {
     left: 2.448vw;
     top: 15.9vh;
     border-radius: 50%;
-    background-color: #FBEFC7;
+    background-color: #F2E3B3;
 }
 
 .chef{
@@ -108,35 +108,68 @@ body {
     height: 1.2vh; /* Товщина лінії */
     background-color:#3E5902; /* Колір лінії */
     border-radius: 5vh;
-    margin-left: 20vw;
+    margin-left: 16vw;
     margin-top: 21vh;
-
 }
 
 .c1{
     position: absolute;
     font-family: 'Frank Ruhl Libre';
-    font-size: 2.5vh;
-    font-size: 2.5vw;
+    font-size: 2.7vh;
+    font-size: 2.7vw;
     font-weight: 400;
     line-height: 1vh;
     text-align: left;
     color: black;
-    left: 27vw;
-    top: 30vh;
+    left: 22.5vw;
+    top: 29.8vh;
 }
 /*____________________________________________________________________________________________________________________*/
+.createBottom{
+    position: absolute;
+    width: 20.3125vw;
+    height: 7.4074vh;
+    background-color:  #F28705;
+    border-radius: 2.5vh;
+    margin-left: 10.9375vw;
+    margin-top: 9.7vh;
+}
+
+.с2{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.7vh;
+    font-size: 1.7vw;
+    font-weight: 400;
+    line-height: 1vh;
+    text-align: left;
+    color: black;
+    left: 4.5vw;
+    bottom: -0.1vh;
+
+}
+
+/*2.963*/
 .stick{
     position: absolute;
     width: 100vw;
-    height: 2vh;
+    height: 2.963vh;
     background-color:  black;
-    top: 20.7vh;
+    margin-top: 5.65vh;
 
 }
 .stick2{
-    top: 93.3vh;
+   top: 60vh;
 }
+.stick3{
+    position: absolute;
+    width: 3vw;
+    height: 9vh;
+    background-color:  #ff22bb;
+    margin-top: -16.4vh;
+    margin-left: 20vw;
+}
+
 /*____________________________________________________________________________________________________________________*/
 .footer {
     position: fixed;
