--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -49,8 +49,13 @@
     <div class="line">
         <div class="c1">User name</div>
     </div>
+    <div class ="createBottom">
+        <p class="с2">Create a new list</p>
+    </div>
+
     <div class="stick"></div>
-    <div class="stick"></div>
+    <div class="stick stick2"></div>
+    <div class="stick3"></div>
 </main>
 
 <footer class="footer">
