--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -49,10 +49,15 @@
     <div class="line">
         <div class="c1">User name</div>
     </div>
-    <div class ="createBottom">
+    <div class ="createList">
         <p class="с2">Create a new list</p>
     </div>
-
+    <div class ="createRecipe">
+        <p class="с2 c3">Create a recipe</p>
+    </div>
+    <div class ="allLists">
+        <p class="с2">All lists</p>
+    </div>
     <div class="stick"></div>
     <div class="stick stick2"></div>
     <div class="stick3"></div>
