--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -56,7 +56,10 @@
         <p class="с2 c3">Create a recipe</p>
     </div>
     <div class ="allLists">
-        <p class="с2">All lists</p>
+        <p class="с2 c4">All lists</p>
+    </div>
+    <div class ="logOut">
+        <p class="с2">Log out of the account</p>
     </div>
     <div class="stick"></div>
     <div class="stick stick2"></div>
