--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -59,7 +59,15 @@
         <p class="с2 c4">All lists</p>
     </div>
     <div class ="logOut">
-        <p class="с2">Log out of the account</p>
+        <p class="с2 с5">Log out of the account</p>
+    </div>
+    <div class ="logInModerator">
+        <p class="с2 с5 c6">Log in as a moderator</p>
+    </div>
+    <div class ="recipesField">
+        <div class="recipesFieldHeader">
+            <p class="c7">User notes</p>
+        </div>
     </div>
     <div class="stick"></div>
     <div class="stick stick2"></div>
