--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,23 +1,19 @@
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Please Log In</title>
+    <title>Spring Security Example </title>
 </head>
 <body>
-<h1>Please Log In</h1>
 <div th:if="${param.error}">
     Invalid username and password.
 </div>
 <div th:if="${param.logout}">
     You have been logged out.
 </div>
-<form method="post" th:action="@{/api/login}">
-    <div>
-        <input name="username" placeholder="Username" type="text"/>
-    </div>
-    <div>
-        <input name="password" placeholder="Password" type="password"/>
-    </div>
-    <input type="submit" value="Log in"/>
+<form method="post" th:action="@{api/auth/login}">
+    <div><label> User Name : <input name="username" type="text"/> </label></div>
+    <div><label> Password: <input name="password" type="password"/> </label></div>
+    <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
 </html>
