--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -104,10 +104,17 @@ body {
     background-color: #F2E3B3;
 }
 
-.user-container:hover, .heart-container:hover {
+.user-container:hover {
     background-color: #733506;
     width: 4.6vw;
     height: 9.2593vh;
+}
+
+.heart-container:hover {
+    background-color: #733506;
+    width: 4.6vw;
+    height: 9.2593vh;
+    cursor: not-allowed;
 }
 
 .home{
