--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -101,7 +101,6 @@ body {
     height: 14.629vh;
     top: 5vw;
     left: 5.83vh;
-    z-index: 2;
 }
 
 .cooker-circle {
@@ -111,7 +110,6 @@ body {
     background-color: #F2E3B3;
     top: 3.125vw;
     left: 2.5vh;
-    z-index: 1;
     border-radius: 50%;
 }
 
@@ -132,6 +130,142 @@ body {
     border-radius: 5%;
     left: 17vw;
     top: 35.18vh;
+}
+
+.button-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 20px;
+    top: 34vh;
+    left: 10.9375vw;
+}
+
+.createList,
+.createRecipe,
+.allLists,
+.logInModerator,
+.logOut {
+    width: 20.3125vw;
+    height: 7.4074vh;
+    border-radius: 2.5vh;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.7vw;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.createList {
+    top: 34vh;
+    background-color: #F28705;
+}
+
+.createRecipe {
+    top: 34.1vh;
+    background-color: #F28705;
+}
+
+.allLists {
+    top: 34.2vh;
+    background-color: #F28705;
+}
+
+.logOut{
+    background-color: #F2B705;
+    top: 34.3vh;
+}
+
+.logInModerator{
+    background: rgba(242, 183, 5, 0.3);
+    top: 34.4vh;
+}
+/*____________________________________________________________________________________________________________________*/
+.recipesField{
+    width: 55.21vw;
+    height: 75.926vh;
+    background-color: #F2E3B3;
+    border-radius: 5vh;
+    margin-top: -43.5vh;
+    margin-left: 42vw;
+}
+
+.recipesFieldHeader{
+    width: 55.21vw;
+    height: 5vh;
+    background-color: #3E5902;
+    border-radius: 5vh 5vh 0vh 0vh ;
+    top: 5vh;
+}
+
+.c7{
+    position: absolute;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 2vh;
+    font-size: 2vw;
+    font-weight: 400;
+    line-height: 1vh;
+    text-align: left;
+    color: white;
+    margin-top: 2vh;
+    margin-left: 23.5vw;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.list-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.list-name {
+    width: 400px;
+    height: 100px;
+    border-radius: 30px;
+    background-color: #F2E3B3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.list-name input {
+    width: 355px;
+    height: 85px;
+    border-radius: 30px;
+    background-color: #FBEFC7;
+    outline: none;
+    border: none;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2.1875vw;
+    font-size: 3.8889vh;
+}
+
+.confirm-list-button {
+    background-color: #F28705;
+    border-radius: 30px;
+    border: none;
+    font-size: 1.5em;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.confirm-list-button:hover {
+    background-color: #d07203;
 }
 
 .footer {
