--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -35,7 +35,7 @@
             </div>
         </button>
 
-        <a th:href="@{/main}" href="main.html">
+        <a th:href="@{/}" href="main.html">
             <img th:src="@{images/home.svg}" src="../../images/home.svg" alt="home" class="home">
         </a>
     </div>
@@ -60,8 +60,8 @@
     </div>-->
 
     <div class="button-container">
-        <button class="createList">Create a List</button>
-        <button class="createRecipe">Create a Recipe</button>
+        <button class="createList">Create a list</button>
+        <button class="createRecipe">Create a recipe</button>
         <button class="allLists">All Lists</button>
         <button class="logOut">Log out</button>
         <button class="logInModerator">Log in as moderator</button>
