--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>User</title>
     <meta charset="UTF-8">
@@ -30,7 +30,6 @@
             <div class="user"
                  onmouseover="changeImage('user-img', '../../images/user-hover.svg')"
                  onmouseout="restoreImage('user-img', '../../images/user.svg')">
-
                 <img id="user-img" th:src="@{images/user.svg}" src="../../images/user.svg" alt="user" class="user">
             </div>
         </button>
