--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -4,7 +4,7 @@
     <title>User</title>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link rel="stylesheet" type="text/css" href="../../static/css/user.css" th:href="@{css/main.css}">
+    <link rel="stylesheet" type="text/css" href="../../static/css/user.css" th:href="@{css/user.css}">
 </head>
 <body>
 <header>
@@ -112,6 +112,6 @@
     </div>
 </footer>
 
-<script th:href="@{js/scripts.js}" src="../../static/js/scripts.js"></script>
+<script th:href="@{js/scripts.js}" src="../../js/scripts.js"></script>
 </body>
 </html>
